codepkg/objects/Brand__c.object
<CustomObject>
    <fields>
        <fullName>Art_Code__c</fullName>
        <label>Art Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Icon__c</fullName>
        <label>Brand Icon</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CareLabelConfigurator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareLabelConfigurator</label>
        <referenceTo>Item_Master__c</referenceTo>
        <relationshipLabel>Brand Icons</relationshipLabel>
        <relationshipName>Brand_Icons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hanger</fullName>
                </value>
                <value>
                    <fullName>Sticker</fullName>
                </value>
                <value>
                    <fullName>Label</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Brand Icons</relationshipLabel>
        <relationshipName>Brand_Icons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retailer_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer Code</label>
        <referenceTo>Retailer_Code__c</referenceTo>
        <relationshipLabel>Brand Icons</relationshipLabel>
        <relationshipName>Brand_Icons</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Brand Icon</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Product__c</columns>
        <columns>Art_Code__c</columns>
        <columns>Brand_Icon__c</columns>
        <columns>Image__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MyList</fullName>
        <columns>NAME</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Product__c</columns>
        <columns>Art_Code__c</columns>
        <columns>Brand_Icon__c</columns>
        <columns>Category__c</columns>
        <columns>Image__c</columns>
        <filterScope>Mine</filterScope>
        <label>MyList</label>
    </listViews>
    <nameField>
        <label>Brand  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Icons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>